--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,10 @@
 buildscript {
     repositories {
         mavenCentral()
-        mavenLocal()
-        maven { url 'https://github.com/steffenschaefer/gwt-gradle-plugin/raw/maven-repo/' }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
     dependencies {
-        classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.4'
+        classpath 'com.android.tools.build:gradle:1.2.3'
     }
 }
 
@@ -15,13 +14,11 @@ allprojects {
 
     version = '1.0'
     ext {
-        appName = 'ParallaxBackgroundTest'
-        gdxVersion = '1.2.0'
-        roboVMVersion = '0.0.13'
+        appName = 'ParallaxBackground'
+        gdxVersion = '1.8.0'
     }
 
     repositories {
-        mavenLocal()
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
